[UPDATE]Editorデフォルト言語をenに変更。

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,3 +18,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="YAKGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="YAKCharacter")
 
+[Internationalization]
+Culture=en
