[UPDATE]EditでPlay時にマウスフォーカスをViewPortに合わせるように

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,6 +17,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/YAK")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="YAKGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="YAKCharacter")
-
+	
 [Internationalization]
-Culture=en
+Culture=en                      //言語設定。
